---
source: tests/markdown_tests.rs
description: supports_links
info: "\n[an link](/foo/bar)\n"
---
ParsedMarkdown {
    html: "<p><a href=\"/foo/bar\">an link</a></p>\n",
    headings: [],
    links: [
        Link {
            title: "an link",
            url: Local(
                "/foo/bar",
            ),
        },
    ],
}
